Fixed image overflow

--- a/app/styles/partials/components/_wod-item.sass
+++ b/app/styles/partials/components/_wod-item.sass
@@ -4,6 +4,7 @@
     max-height: 500px
     max-width: 500px
     margin: 0px
+    overflow: hidden
 
     img
       width: 100%
